--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "type": "module",
-  "description": "[![Actions Status](https://github.com/Loresina/js-starter-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Loresina/js-starter-project-44/actions)",
+  "description": "Set of console games on logic and mathematics",
   "main": "index.js",
   "bin": {
     "brain-games": "bin/brain-games.js",
